# cdo-parser

./: cdo-parser.cabal  flake.nix  initialize.sql  migrate.sh  overlay.nix
app/: Main.hs  OptionsParser.hs
sql/: initialize.sql
src/: BatchProcessor.hs
src/Dataset/: DailySummaries.hs  Stations.hs  Superghcnd.hs
