cabal-version:      2.4
name:               cdo-parser
version:            0.1.0.0
description:        A tool for parsing CDO data and loading it into a postgres database
bug-reports:        https://wwww.github.com/solomon-b/cdo-parser
author:             ssbothwell
maintainer:         ssbothwell@gmail.com
extra-source-files: CHANGELOG.md

executable rainwater-collector
  main-is:          Main.hs
  build-depends:
      base
    , cdo-parser
    , containers
    , mtl
    , postgresql-simple
    , text
    , transformers
  hs-source-dirs:   app
  default-language: Haskell2010

library
  hs-source-dirs: src
  build-depends:
    , base >= 2 && < 5
    , aeson
    , attoparsec
    , containers
    , mtl
    , postgresql-simple
    , scientific
    , streamly
    , text
    , time
    , vector
  exposed-modules:
    Dataset.Superghcnd
    Dataset.Stations
  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications