cabal-version:      2.4
name:               cdo-parser
version:            0.1.0.0
description:        A tool for parsing CDO data and loading it into a postgres database
bug-reports:        https://wwww.github.com/solomon-b/cdo-parser
author:             ssbothwell
maintainer:         ssbothwell@gmail.com
extra-source-files: CHANGELOG.md

common common-settings
  default-language:    Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-unused-do-bind

common common-libraries
  build-depends:
    , base >= 2 && < 5
    , attoparsec
    , scientific
    , streamly >= 0.8.1
    , text
    , time
    , containers
    , vector

executable cdo-parser
  import:
    , common-libraries
    , common-settings
  main-is:          Main.hs
  build-depends:
    , cdo-parser
    , postgresql-simple
  hs-source-dirs:   app
  default-language: Haskell2010

library
  import:
    , common-libraries
    , common-settings
  hs-source-dirs: src
  build-depends:
    , postgresql-simple
  exposed-modules:
    BatchProcessor
    Dataset.DailySummaries
    Dataset.Stations